# rexel-offers

./: main.py  pyproject.toml  rexel.ipynb
